# syslog-amqp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  syslog-amqp.conf
docs/: SDD.adoc  SRS.adoc  requirements.txt
docs/fig/: codec.uml  decomposition.uml  fig1.txt  input.txt  main_pipeline.uml  message.uml  pipeline.uml  processor.uml  reactor.uml
include/: Datetime.h  Message.h  MessageId.h  amqpcpp
src/: AbstractReactor.h  AbstractReactorBuilder.h  AsioRabbitMQPublisher.cpp  AsioRabbitMQPublisher.h  AsioRabbitMQPublisherFactory.cpp  AsioRabbitMQPublisherFactory.h  AsioReactor.cpp  AsioReactor.h  CMakeLists.txt  CmdOptions.cpp  CmdOptions.h  DataObservable.cpp  DataObservable.h  DataObserver.h  Datetime.cpp  Datetime.h  Decoder.cpp  Decoder.h  Endpoint.cpp  Endpoint.h  IniParser.cpp  IniParser.h  JsonMessageEncoder.cpp  JsonMessageEncoder.h  Logging.cpp  Logging.h  Message.cpp  Message.h  MessageEncoder.h  MessageId.cpp  MessageObservable.cpp  MessageObservable.h  MessageObserver.h  NetListener.h  Options.cpp  Options.h  PublishMessageObserver.cpp  PublishMessageObserver.h  RabbitMQPublisher.h  RabbitMQPublisherFactory.h  (+8 more)
tests/: CMakeLists.txt  gtest-inc.h  test_DataObserver.cpp  test_Datetime.cpp  test_Endpoint.cpp  test_IniParser.cpp  test_JsonMessageEncoder.cpp  test_Message.cpp  test_MessageId.cpp  test_MessageObserver.cpp  test_Options.cpp
